# SimpleRender

./: CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert  debug.frag  debug.vert
src/: debug_callback.cpp  debug_callback.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  utils.cpp  utils.h  vertex.h
